backend-autoflow/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: sarra-virtual-machine
      containers:
        - name: frontend
          image: sarra539/autoflow-front:latest
          ports:
            - containerPort: 3000
